objects/User.object
<CustomObject>
    <fields>
        <fullName>BD_Global_VP_Email__c</fullName>
        <label>BD Global VP Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BD_Global_VP__c</fullName>
        <label>BD Global VP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Regional_Director_Email__c</fullName>
        <label>BD Regional Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BD_Regional_Director__c</fullName>
        <label>BD Regional Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMS-Metropool</fullName>
                </value>
                <value>
                    <fullName>AMS-Labs</fullName>
                </value>
                <value>
                    <fullName>AMS-Weteringschans</fullName>
                </value>
                <value>
                    <fullName>ATX-Congress</fullName>
                </value>
                <value>
                    <fullName>ATX-Labs</fullName>
                </value>
                <value>
                    <fullName>BKN-Dumbo Heights</fullName>
                </value>
                <value>
                    <fullName>BK-Williamsburg</fullName>
                </value>
                <value>
                    <fullName>BOS-Fort Point</fullName>
                </value>
                <value>
                    <fullName>BOS-Labs</fullName>
                </value>
                <value>
                    <fullName>BOS-South Station</fullName>
                </value>
                <value>
                    <fullName>CHI-Fulton Market</fullName>
                </value>
                <value>
                    <fullName>CHI-Labs</fullName>
                </value>
                <value>
                    <fullName>CHI-RiverNorth</fullName>
                </value>
                <value>
                    <fullName>DC-Chinatown</fullName>
                </value>
                <value>
                    <fullName>DC-DuPont Circle</fullName>
                </value>
                <value>
                    <fullName>DC-Labs</fullName>
                </value>
                <value>
                    <fullName>DC-Wonder Bread Factory</fullName>
                </value>
                <value>
                    <fullName>ISR-Labs</fullName>
                </value>
                <value>
                    <fullName>LA-Fine Arts</fullName>
                </value>
                <value>
                    <fullName>LA-Fine Arts Building</fullName>
                </value>
                <value>
                    <fullName>LA-Hollywood</fullName>
                </value>
                <value>
                    <fullName>LA-Labs</fullName>
                </value>
                <value>
                    <fullName>LA-Promenade</fullName>
                </value>
                <value>
                    <fullName>LA-Santa Monica</fullName>
                </value>
                <value>
                    <fullName>LON-Devonshire</fullName>
                </value>
                <value>
                    <fullName>LON-East London</fullName>
                </value>
                <value>
                    <fullName>LON-Labs</fullName>
                </value>
                <value>
                    <fullName>LON-Moorgate</fullName>
                </value>
                <value>
                    <fullName>LON-South Bank</fullName>
                </value>
                <value>
                    <fullName>LON-Soho London</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_User_Role__c</fullName>
        <description>Copy of Role name, so that the field can be shown in hover window</description>
        <formula>UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_View_Building__c</fullName>
        <label>Community View Building</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Director_Email__c</fullName>
        <label>Senior Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <description>Director of Sales Rep</description>
        <label>Senior Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_Update__c</fullName>
        <description>This field is only created for updating users for meeting criteria for sales hierarchy batches.</description>
        <label>Force Update</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp;" "&amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_VP_Email__c</fullName>
        <label>Global VP Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Global_VP__c</fullName>
        <label>Global VP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <label>Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pod_Director_Email__c</fullName>
        <label>Pod Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pod_Director__c</fullName>
        <label>Pod Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REA_Director_Email__c</fullName>
        <label>REA Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>REA_Director__c</fullName>
        <label>REA Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REA_Global_VP_Email__c</fullName>
        <label>REA Global VP Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>REA_Global_VP__c</fullName>
        <label>REA Global VP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REA_Senior_Director_Email__c</fullName>
        <label>REA Senior Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>REA_Senior_Director__c</fullName>
        <label>REA Senior Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Pod__c</fullName>
        <label>Sales Pod</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARG_001</fullName>
                </value>
                <value>
                    <fullName>ARG_002</fullName>
                </value>
                <value>
                    <fullName>ARG_003</fullName>
                </value>
                <value>
                    <fullName>ARG_004</fullName>
                </value>
                <value>
                    <fullName>ARG_005</fullName>
                </value>
                <value>
                    <fullName>AUS_001</fullName>
                </value>
                <value>
                    <fullName>AUS_002</fullName>
                </value>
                <value>
                    <fullName>AUS_003</fullName>
                </value>
                <value>
                    <fullName>AUS_004</fullName>
                </value>
                <value>
                    <fullName>AUS_005</fullName>
                </value>
                <value>
                    <fullName>BRA_001</fullName>
                </value>
                <value>
                    <fullName>BRA_002</fullName>
                </value>
                <value>
                    <fullName>BRA_003</fullName>
                </value>
                <value>
                    <fullName>BRA_004</fullName>
                </value>
                <value>
                    <fullName>BRA_005</fullName>
                </value>
                <value>
                    <fullName>CHL_001</fullName>
                </value>
                <value>
                    <fullName>CHL_002</fullName>
                </value>
                <value>
                    <fullName>CHL_003</fullName>
                </value>
                <value>
                    <fullName>CHL_004</fullName>
                </value>
                <value>
                    <fullName>CHL_005</fullName>
                </value>
                <value>
                    <fullName>CHN_001</fullName>
                </value>
                <value>
                    <fullName>CHN_002</fullName>
                </value>
                <value>
                    <fullName>CHN_003</fullName>
                </value>
                <value>
                    <fullName>CHN_004</fullName>
                </value>
                <value>
                    <fullName>CHN_005</fullName>
                </value>
                <value>
                    <fullName>CHN_006</fullName>
                </value>
                <value>
                    <fullName>CHN_007</fullName>
                </value>
                <value>
                    <fullName>CHN_008</fullName>
                </value>
                <value>
                    <fullName>CHN_009</fullName>
                </value>
                <value>
                    <fullName>CHN_010</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Role__c</fullName>
        <description>Role of Sales Rep</description>
        <label>Sales Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ENT - Pod Director</fullName>
                </value>
                <value>
                    <fullName>ENT - Global VP</fullName>
                </value>
                <value>
                    <fullName>ENT - Account Director</fullName>
                </value>
                <value>
                    <fullName>ENT - Regional VP</fullName>
                </value>
                <value>
                    <fullName>ENT - Senior Director</fullName>
                </value>
                <value>
                    <fullName>ENT - BD Rep</fullName>
                </value>
                <value>
                    <fullName>ENT - BD Global VP</fullName>
                </value>
                <value>
                    <fullName>ENT - BD Regional Director</fullName>
                </value>
                <value>
                    <fullName>ENT - REA Senior Director</fullName>
                </value>
                <value>
                    <fullName>ENT - REA Global VP</fullName>
                </value>
                <value>
                    <fullName>ENT - REA Sr. Associate</fullName>
                </value>
                <value>
                    <fullName>ENT - Account Executive</fullName>
                </value>
                <value>
                    <fullName>AM - Enterprise</fullName>
                </value>
                <value>
                    <fullName>AM - Hybrid</fullName>
                </value>
                <value>
                    <fullName>AM - Manager</fullName>
                </value>
                <value>
                    <fullName>AM - Regional</fullName>
                </value>
                <value>
                    <fullName>AM - Community</fullName>
                </value>
                <value>
                    <fullName>MLB - AE</fullName>
                </value>
                <value>
                    <fullName>MLB - AE (ACTING)</fullName>
                </value>
                <value>
                    <fullName>MLB - SD</fullName>
                </value>
                <value>
                    <fullName>MLB - SD (ACTING)</fullName>
                </value>
                <value>
                    <fullName>MLB - SM</fullName>
                </value>
                <value>
                    <fullName>MLB - SM (ACTING)</fullName>
                </value>
                <value>
                    <fullName>Consumer - AE</fullName>
                </value>
                <value>
                    <fullName>Consumer - SM</fullName>
                </value>
                <value>
                    <fullName>Consumer - SD</fullName>
                </value>
                <value>
                    <fullName>Regional Head of Growth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VP_Email__c</fullName>
        <label>Regional VP Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VP__c</fullName>
        <description>VP of Sales Rep</description>
        <label>Regional VP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>Beta_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>beta</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>notContain</operation>
            <value>india</value>
        </filters>
        <label>Beta Users</label>
    </listViews>
    <listViews>
        <fullName>Last_login_over_60_days</fullName>
        <booleanFilter>(1 OR 3) AND 2 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>notEqual</operation>
            <value>CEO,CXO</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>notEqual</operation>
            <value>Legal General Counsel</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>notEqual</operation>
            <value>mgross@wework.com,samuel.lee@wework.com</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>notEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Last login over 60 days</label>
    </listViews>
    <listViews>
        <fullName>NMD_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>NMD</value>
        </filters>
        <label>NMD Users</label>
    </listViews>
    <listViews>
        <fullName>WeWork_Regional_Sales_Lead_Beta_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>WeWork Regional Sales Lead - Beta</value>
        </filters>
        <label>WeWork Regional Sales Lead - Beta users</label>
    </listViews>
    <listViews>
        <fullName>active_user_with_no_roles</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>notContain</operation>
            <value>ramsey,chatter</value>
        </filters>
        <label>active user with no roles</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DocuSign Active Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignInactiveUsers</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DocuSign Inactive Users</label>
    </listViews>
    <validationRules>
        <fullName>No_Manager_For_VP_Role</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Sales_Role__c ,'VP of Sales'),NOT(ISBLANK(Manager.Id)))</errorConditionFormula>
        <errorDisplayField>ManagerId</errorDisplayField>
        <errorMessage>'VP of Sales' should not have any manager, as this role is on the top of the sales hierarchy.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Report_To_SalesDirector</fullName>
        <active>false</active>
        <description>This validation is used for Sales hierarchy. Junior and Senior account executive can only report to Sales Director.</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(Sales_Role__c  , 'Sr. Account Executive'),ISPICKVAL(Sales_Role__c  , 'Jr. Account Executive')),NOT(ISPICKVAL(Manager.Sales_Role__c  , 'Director of Sales')))</errorConditionFormula>
        <errorDisplayField>ManagerId</errorDisplayField>
        <errorMessage>Sr. Account Executive or Jr. Account Executive can only report to Sales Director</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Report_To_VPofSales</fullName>
        <active>false</active>
        <description>This validation is used for Sales hierarchy. Director of Sales can only report to VP of Sales.</description>
        <errorConditionFormula>AND(ISPICKVAL(Sales_Role__c ,'Director of Sales'),NOT(ISPICKVAL(Manager.Sales_Role__c , 'VP of Sales')))</errorConditionFormula>
        <errorDisplayField>ManagerId</errorDisplayField>
        <errorMessage>Sales Director can only report to VP of Sales</errorMessage>
    </validationRules>
</CustomObject>